[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game/UFO/PlayerUFO.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/NPCS/Chicken/Chicken.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/MainScene.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 400, 50 )

[node name="MainScene" type="Node2D"]
position = Vector2( 356, 675 )
script = ExtResource( 3 )
SpawnLocations = [ Vector2( -300, -72 ), Vector2( 300, -72 ) ]

[node name="PlayerUFO" parent="." instance=ExtResource( 1 )]
position = Vector2( 18, -450 )

[node name="RigidBody2D" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2( 0.5, 0 )
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="RigidBody2D/CollisionShape2D2"]
margin_left = -400.0
margin_top = -50.0
margin_right = 400.0
margin_bottom = 50.0
color = Color( 0.235294, 0.482353, 0.329412, 1 )

[node name="RigidBody2D2" parent="." instance=ExtResource( 2 )]
position = Vector2( -161, -73 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="StartWaitTimer" type="Timer" parent="."]
one_shot = true

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartPos" type="Position2D" parent="."]
position = Vector2( 24, -569 )

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="StartWaitTimer" to="." method="_on_StartWaitTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
